Fix ability to define records as beans